--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -11,7 +11,10 @@
   transition: background 3.5s ease-out;
   background: linear-gradient(to right, #ed6000 50%, white 50%);
   background-position: right bottom;
+  background-repeat: no-repeat;
   background-size: 200% 100%;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
 }
 
 .c-button:hover,
