Update layout of the filters in desktop and mobile modes

--- a/src/styles/filters.css
+++ b/src/styles/filters.css
@@ -29,6 +29,7 @@
 .typesContainer {
   max-height: calc(75vh - 250px);
   overflow: auto;
+  padding: 0 25px;
 }
 
 .filtersHeader {
@@ -62,5 +63,8 @@
 
   .typesContainer {
     max-height: calc(75vh - 160px);
+    width: 80vw;
+    margin: 0 auto;
+    padding: 0;
   }
 }
