--- a/src/styles/inputRange.css
+++ b/src/styles/inputRange.css
@@ -1,6 +1,6 @@
 .input-range {
-  width: 350px;
-  margin: 15px 15px 40px 25px;
+  width: 90%;
+  margin: 15px 15px 40px 20px;
 }
 
 .input-range__label {
