--- a/src/styles/filters.scss
+++ b/src/styles/filters.scss
@@ -1,9 +1,11 @@
 .c-filters {
   position: relative;
-  text-align: center; }
+  text-align: center;
+}
 
 .buttonContainer {
-  position: fixed; }
+  position: fixed;
+}
 
 .filtersDropdown {
   display: flex;
@@ -18,23 +20,29 @@
   padding: 5px;
   opacity: 0.9;
   background: white;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
-  transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1); }
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+  transition: box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1);
+}
 
 .clicked {
-  box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08); }
+  box-shadow: 0 0px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+}
 
 .typesContainer {
   max-height: calc(75vh - 250px);
   overflow: auto;
-  padding: 0 25px; }
-  .typesContainer .c-button--text.left {
-    padding-left: 35px; }
+  padding: 0 25px;
+  .c-button--text.left {
+    padding-left: 35px;
+  }
+}
 
 .filtersHeader {
-  display: none; }
+  display: none;
+}
 
 @media (max-width: 670px) {
+
   .filtersDropdown {
     z-index: 10;
     top: 0;
@@ -43,13 +51,21 @@
     height: 100vh;
     max-height: none;
     min-height: none;
-    opacity: 1; }
+    opacity: 1;
+  }
+
   .filtersDropdown .filtersHeader {
-    display: block; }
+    display: block;
+  }
+
   .filtersHeader .icon.right {
-    height: fit-content; }
+    height: fit-content;
+  }
+
   .typesContainer {
     max-height: calc(75vh - 160px);
     width: 80vw;
     margin: 0 auto;
-    padding: 0; } }
+    padding: 0;
+  }
+}
