--- a/src/styles/drawer.css
+++ b/src/styles/drawer.css
@@ -76,12 +76,13 @@
 
 .c-drawer .c-drawer--title {
   text-align: center;
+  margin-bottom: 5px;
 }
 
 @media (max-width: 768px) {
 
   .c-drawer .c-drawer--text {
-    font-size: medium;
+    font-size: 14px;
   }
 
   .c-drawer--title {
