--- a/src/styles/alert.css
+++ b/src/styles/alert.css
@@ -72,7 +72,7 @@
   .react-responsive-modal-modal .c-alert--content .c-selectedFilters {
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     flex-wrap: wrap;
   }
 
