style and hookup datepicker to logic

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,9 +7,4 @@ body {
   padding: 0;
   font-family: sans-serif;
   font-size: 14px;
-  overflow: hidden;
-}
-
-::-webkit-scrollbar {
-    display: none;
-}
+  overflow: hidden; }
