--- a/src/styles/filters.css
+++ b/src/styles/filters.css
@@ -21,6 +21,9 @@
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
   transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1); }
 
+.filtersFooter .c-container {
+  margin: 10px auto; }
+
 .clicked {
   box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08); }
 
