--- a/src/styles/date-range-picker.css
+++ b/src/styles/date-range-picker.css
@@ -15,4 +15,36 @@
       .DateRangePicker .DateRangePickerInput .DateInput input,
       .DateRangePicker .DateRangePickerInput .DateInput input::placeholder {
         font-family: sans-serif;
-        text-align: center; }
+        text-align: center;
+        font-size: 14px; }
+      .DateRangePicker .DateRangePickerInput .DateInput_input__focused {
+        border-bottom: 2px solid #ed6000; }
+
+.CalendarDay__hovered_span {
+  background: #ed6000;
+  color: #fff;
+  border: 1px solid #dc5b03; }
+  .CalendarDay__hovered_span:hover {
+    background: #ed6000b5;
+    border: 1px solid #dc5b038c;
+    color: #fff; }
+
+.CalendarDay__selected {
+  background: #ed6000;
+  border: 1px solid #dc5b03; }
+  .CalendarDay__selected:hover {
+    background: #ed6000b5;
+    border: 1px solid #dc5b038c;
+    color: #fff; }
+  .CalendarDay__selected_span {
+    background: #ed6000;
+    border: 1px solid #dc5b03; }
+    .CalendarDay__selected_span:hover {
+      background: #ed6000b5;
+      border: 1px solid #dc5b038c;
+      color: #fff; }
+
+.DayPickerKeyboardShortcuts_show__bottomRight {
+  border-right: 33px solid #ed6000; }
+  .DayPickerKeyboardShortcuts_show__bottomRight:hover {
+    border-right: 33px solid #ed6000b5; }
