--- a/src/styles/documents.css
+++ b/src/styles/documents.css
@@ -30,7 +30,7 @@
   position: relative;
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   padding: 0 0 10px 0;
   overflow-x: auto;
 }
