Make filters scrollable

--- a/src/styles/filters.scss
+++ b/src/styles/filters.scss
@@ -21,6 +21,12 @@
   background: white;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
   transition: box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1);
+
+  .scrollableDiv {
+    overflow: auto;
+    height: 70vh;
+    padding-top: 5px;
+  }
 }
 
 .filtersFooter {
@@ -35,8 +41,7 @@
 
 .typesContainer {
   max-height: calc(75vh - 250px);
-  overflow: auto;
-  padding: 0 25px;
+  padding: 10px 25px;
   .c-button--text.left {
     padding-left: 35px;
   }
@@ -71,6 +76,6 @@
     max-height: calc(75vh - 160px);
     width: 80vw;
     margin: 0 auto;
-    padding: 0;
+    padding: 10px 0 0 0;
   }
 }
