--- a/src/styles/filters.css
+++ b/src/styles/filters.css
@@ -13,13 +13,16 @@
   left: 15px;
   width: auto;
   height: auto;
-  min-height: 25vh;
   max-height: 75vh;
   padding: 5px;
   opacity: 0.9;
   background: white;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
   transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1); }
+  .filtersDropdown .scrollableDiv {
+    overflow: auto;
+    height: 70vh;
+    padding-top: 5px; }
 
 .filtersFooter .c-container {
   margin: 10px auto; }
@@ -29,8 +32,7 @@
 
 .typesContainer {
   max-height: calc(75vh - 250px);
-  overflow: auto;
-  padding: 0 25px; }
+  padding: 10px 25px; }
   .typesContainer .c-button--text.left {
     padding-left: 35px; }
 
@@ -55,4 +57,4 @@
     max-height: calc(75vh - 160px);
     width: 80vw;
     margin: 0 auto;
-    padding: 0; } }
+    padding: 10px 0 0 0; } }
