--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -102,7 +102,7 @@
   .c-filters .c-button {
     padding: 5px;
     min-width: 100px;
-    font-size: small;
+    font-size: 14px;
     text-align: center;
   }
 
