add infinite scroller

--- a/src/styles/documentItem.css
+++ b/src/styles/documentItem.css
@@ -126,7 +126,7 @@
 
 .c-documentList {
   padding: 1px;
-  max-height: calc(100vh - 170px);
+  height: calc(100vh - 170px);
   overflow: auto;
 }
 
