--- a/src/styles/documentItem.scss
+++ b/src/styles/documentItem.scss
@@ -2,38 +2,49 @@
   margin-bottom: 30px;
   text-align: left;
   width: 100%;
-  border: 2px solid transparent; }
+  border: 2px solid transparent;
+}
 
 .c-documents .c-documents--content {
   cursor: pointer;
-  position: relative; }
+  position: relative;
+}
 
 .c-documents--item:hover {
-  border: 2px solid #ed6000; }
+  border: 2px solid #ed6000;
+}
 
 .c-documents--content .icon {
   top: 50%;
-  margin-top: -35px; }
+  margin-top: -35px;
+}
 
 .c-documents .c-documents--text {
   padding: 15px 15px 15px 70px;
   width: 50%;
-  display: inline-block; }
+  display: inline-block;
+}
 
 @media (max-width: 900px) {
   .c-documents .c-documents--text {
-    width: 92%; }
+    width: 92%;
+  }
+
   .c-documents .c-documents--tag {
     width: 100%;
-    padding-top: 0px; } }
+    padding-top: 0px;
+  }
+}
 
 .c-documents--text h3 {
   font-weight: lighter;
-  margin: 5px 0; }
+  margin: 5px 0;
+}
 
 .c-documents--text h2 {
   font-weight: 600;
-  margin: 5px 0; }
+  margin: 5px 0;
+}
 
 .c-documents--tag {
   width: 45%;
@@ -43,22 +54,27 @@
   float: right;
   display: flex;
   justify-content: flex-end;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+}
 
 .c-documents--tag div {
-  display: inline-block; }
+  display: inline-block;
+ }
 
 .c-documents--tag div .c-container {
   width: auto;
-  margin: 5px; }
+  margin: 5px;
+}
 
 .c-documents .c-button {
   background: #eeeeee;
-  padding: 7px; }
+  padding: 7px;
+}
 
 .c-documents .c-button--text {
   min-width: 35px;
-  line-height: 10px; }
+  line-height: 10px;
+}
 
 .c-documents .c-documents--dropdown {
   position: absolute;
@@ -68,56 +84,75 @@
   height: 50px;
   border: none;
   outline: none;
-  background: transparent; }
+  background: transparent;
+}
 
 .c-details .c-container {
-  margin-top: 2px; }
+  margin-top: 2px;
+}
 
 .c-details .c-details--content {
   padding: 10px;
   background: #eeeeee;
-  min-height: 54px; }
+  min-height: 54px;
+}
 
 .c-details .c-details--text {
   margin-bottom: 10px;
-  padding-right: 34px; }
+  padding-right: 34px;
+}
 
 .c-details .c-details--snippets {
   margin-bottom: 10px;
   font-style: italic;
   font-weight: lighter;
-  padding-right: 34px; }
+  padding-right: 34px;
+}
 
 .source__title {
   display: inline-block;
   margin: 5px 5px;
-  font-style: normal; }
+  font-style: normal;
+}
 
 .c-details h3, p, a {
   margin: 5px;
-  font-weight: normal; }
+  font-weight: normal;
+}
 
 .c-details .icon {
   position: relative;
-  display: inline-block; }
+  display: inline-block;
+}
 
 .c-documentList {
   padding: 1px;
   max-height: calc(100vh - 170px);
-  overflow: auto; }
+  overflow: auto;
+}
 
 .snippets {
-  margin-left: 5px; }
+  margin-left: 5px;
+}
 
 .snippets p {
-  display: inline; }
+  display: inline;
+}
 
 @media (max-width: 768px) {
   .c-documents .c-button {
-    font-size: small; }
+    font-size: small;
+  }
+
   .c-documents--text h2 {
-    font-size: larger; }
+    font-size: larger;
+  }
+
   .c-documents--text h3 {
-    font-size: small; }
-  .c-details h3, p, a {
-    font-size: small; } }
+    font-size: small;
+  }
+
+  .c-details h3, p, a  {
+    font-size: small;
+  }
+}
