style badges to scale horizontally with content

--- a/src/styles/badge.scss
+++ b/src/styles/badge.scss
@@ -5,6 +5,9 @@
   color: #333;
   font-size: 12px;
   font-weight: 700;
-  padding: 3px 7px; }
-  .c-badge .active {
-    color: #ED6000; }
+  padding: 3px 7px;
+
+  .active {
+    color: #ED6000;
+  }
+}
