--- a/src/styles/municipalities.scss
+++ b/src/styles/municipalities.scss
@@ -11,39 +11,53 @@
   padding: 0 5vw;
   margin: 0 auto;
   overflow: auto;
-  text-align: left; }
-  .c-municipalities a {
-    text-decoration: none; }
+  text-align: left;
+
+  a {
+    text-decoration: none;
+  }
+}
 
 .c-municipalities .c-municipalities--header h1 {
-  display: inline-block; }
-
+  display: inline-block;
+}
 .c-municipalities .c-municipalities--header .c-button--wrapper {
-  float: right; }
+  float: right;
+}
 
 .c-municipalities .c-container {
   width: 100%;
-  margin: 15px 0; }
+  margin: 15px 0;
+}
 
 @media (max-width: 670px) {
+
   .c-municipalities .c-municipalities--header .c-button--wrapper .c-container .c-button .c-button--text {
-    padding-right: 40px; }
+    padding-right: 40px;
+  }
+
   .c-municipalities .c-container {
     width: 100%;
-    margin: 7px 0; } }
+    margin: 7px 0;
+  }
+}
 
 .c-municipalities .c-searchBox {
-  width: auto; }
+  width: auto;
+}
 
 .c-municipalities .c-municipality {
   text-align: left;
   cursor: pointer;
   padding: 15px;
   width: 100%;
-  border: 2px solid transparent; }
+  border: 2px solid transparent;
+}
 
 .c-municipalities .c-municipality h4 {
-  margin: 0; }
+  margin: 0;
+}
 
 .c-municipality:hover {
-  border: 2px solid #ed6000; }
+  border: 2px solid #ed6000;
+}
