--- a/src/styles/documentItem.css
+++ b/src/styles/documentItem.css
@@ -118,6 +118,6 @@
   .c-documents--text h2 {
     font-size: larger; }
   .c-documents--text h3 {
-    font-size: small; }
+    font-size: 15px; }
   .c-details h3, p, a {
-    font-size: small; } }
+    font-size: 14px; } }
