--- a/src/styles/filters.css
+++ b/src/styles/filters.css
@@ -21,7 +21,7 @@
   transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1); }
   .filtersDropdown .scrollableDiv {
     overflow: auto;
-    height: 70vh;
+    max-height: 70vh;
     padding-top: 5px; }
 
 .filtersFooter .c-container {
