--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -36,6 +36,7 @@
   display: inline-block;
   min-width: 200px;
   line-height: 30px;
+  font-size: 17px;
 }
 
 .c-button .c-button--text.left {
@@ -83,21 +84,17 @@
   }
 
   .c-button .c-button--text {
-    min-width: 0px;
-  }
-
-  .c-alert .c-button--text.left {
-    min-width: 135px;
-    font-size: small;
+    min-width: auto;
+    font-size: 15px;
   }
 
   .c-alert .icon {
-    padding: 5px;
+    padding: 5px 15px 5px 5px;
   }
 
   .c-alert .c-button {
-    padding: 5px;
-    min-width: 115px;
+    padding: 5px 5px 5px 20px;
+    min-width: 150px;
   }
 
   .c-filters .c-button {
