--- a/src/styles/checkbox.scss
+++ b/src/styles/checkbox.scss
@@ -4,10 +4,12 @@
   width: 22px;
   height: 22px;
   vertical-align: bottom;
-  margin-right: 10px; }
+  margin-right: 10px;
+}
 
 .c-checkbox input {
-  display: none; }
+  display: none;
+}
 
 .c-checkbox label {
   cursor: pointer;
@@ -17,7 +19,8 @@
   top: 0;
   left: 0;
   background: #efefef;
-  box-shadow: inset 0 1px 0 0 #bbb; }
+  box-shadow: inset 0 1px 0 0 #bbb;
+}
 
 .c-checkbox label:after {
   filter: alpha(opacity=0);
@@ -32,15 +35,18 @@
   border: 4px solid #ED6000;
   border-top: none;
   border-right: none;
-  transform: rotate(-45deg); }
+  transform: rotate(-45deg);
+}
 
 .c-checkbox label:hover::after {
   filter: alpha(opacity=30);
-  opacity: 0.3; }
+  opacity: 0.3;
+}
 
 .c-checkbox input:checked + label:after {
   filter: alpha(opacity=100);
-  opacity: 1; }
+  opacity: 1;
+}
 
 .c-checkbox span {
   display: block;
@@ -52,9 +58,12 @@
   padding: 5px;
   cursor: pointer;
   user-select: none;
-  font-size: 16px; }
+  font-size: 16px;
+}
 
 @media (max-width: 425px) {
   .c-checkbox span {
     width: 204px;
-    font-size: 14px; } }
+    font-size: 13px;
+  }
+}
