--- a/src/styles/documentItem.scss
+++ b/src/styles/documentItem.scss
@@ -149,10 +149,10 @@
   }
 
   .c-documents--text h3 {
-    font-size: small;
+    font-size: 15px;
   }
 
   .c-details h3, p, a  {
-    font-size: small;
+    font-size: 14px;
   }
 }
