--- a/src/styles/documents.scss
+++ b/src/styles/documents.scss
@@ -1,25 +1,30 @@
 .outerContainer {
-  padding: 10px 20px 20px 20px; }
+  padding: 10px 20px 20px 20px;
+}
 
 .outerContainer > .c-container {
   width: 100%;
   background: none;
   text-align: center;
-  margin: 0; }
+  margin: 0;
+}
 
 .c-documents {
   width: 85%;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 .c-documents .c-container {
   margin: 0;
   width: 100%;
   position: relative;
-  opacity: 1; }
+  opacity: 1;
+}
 
 .c-documents > .c-container {
   margin-bottom: 50px;
-  width: 100%; }
+  width: 100%;
+}
 
 .c-selectedFilters {
   position: relative;
@@ -27,10 +32,12 @@
   display: flex;
   flex-wrap: nowrap;
   padding: 0 0 10px 0;
-  overflow-x: auto; }
+  overflow-x: auto;
+}
 
 .c-tags {
-  flex: 0 0 auto; }
+  flex: 0 0 auto;
+}
 
 .c-tags .c-container {
   width: auto;
@@ -39,21 +46,30 @@
   padding: 7px;
   display: flex;
   justify-content: space-between;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .c-tags .c-tags--text {
-  padding-right: 5px; }
+  padding-right: 5px;
+}
 
 .c-selectedFilters .icon {
   padding: 2px 0 0 0;
   position: relative;
-  display: inline-block; }
+  display: inline-block;
+}
 
 @media (max-width: 670px) {
   .outerContainer {
-    padding: 5px 10px 10px 10px; }
+    padding: 5px 10px 10px 10px;
+  }
+
   .c-tags .c-container {
-    padding: 4px; }
+    padding: 4px;
+  }
+
   .c-tags .c-tags--text {
     font-size: 15px;
-    line-height: 20px; } }
+    line-height: 20px;
+  }
+}
