More styling adjustments to make (button) labels bigger

--- a/src/styles/documentItem.css
+++ b/src/styles/documentItem.css
@@ -97,6 +97,9 @@
   margin: 5px;
   font-weight: normal; }
 
+.c-details p, a {
+  font-size: 15px; }
+
 .c-details .icon {
   position: relative;
   display: inline-block; }
@@ -107,7 +110,8 @@
   overflow: auto; }
 
 .snippets {
-  margin-left: 5px; }
+  margin-left: 5px;
+  font-size: 15px; }
 
 .snippets p {
   display: inline; }
