--- a/src/styles/alert.css
+++ b/src/styles/alert.css
@@ -29,7 +29,7 @@
   width: 100%;
   line-height: 30px;
   font-family: sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   border: none;
   font-weight: lighter;
   padding: 7px;
@@ -49,7 +49,8 @@
 .react-responsive-modal-modal .c-alert--content h3 {
   font-weight: lighter;
   -webkit-margin-before: 5px;
-  -webkit-margin-after: 5px; }
+  -webkit-margin-after: 5px;
+  font-size: 16px; }
 
 .react-responsive-modal-modal .c-alert--footer {
   order: 99;
