--- a/src/styles/municipalities.css
+++ b/src/styles/municipalities.css
@@ -13,7 +13,8 @@
   overflow: auto;
   text-align: left; }
   .c-municipalities a {
-    text-decoration: none; }
+    text-decoration: none;
+    margin: 0; }
 
 .c-municipalities .c-municipalities--header h1 {
   display: inline-block; }
@@ -24,6 +25,9 @@
 .c-municipalities .c-container {
   width: 100%;
   margin: 15px 0; }
+
+.c-municipalities .c-municipalities--header .c-button--wrapper .c-container .c-button .c-button--text {
+  padding-right: 20px; }
 
 @media (max-width: 670px) {
   .c-municipalities .c-municipalities--header .c-button--wrapper .c-container .c-button .c-button--text {
@@ -43,7 +47,8 @@
   border: 2px solid transparent; }
 
 .c-municipalities .c-municipality h4 {
-  margin: 0; }
+  margin: 0;
+  color: black; }
 
 .c-municipality:hover {
   border: 2px solid #ed6000; }
