--- a/src/styles/zoomControls.scss
+++ b/src/styles/zoomControls.scss
@@ -3,17 +3,21 @@
   top: 0;
   right: 0;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .c-zoomControls a {
   margin: 0;
   color: black;
-  text-align: center; }
+  text-align: center;
+}
 
 .c-zoomControls a:first-child .c-container {
-  margin-top: 15px; }
+  margin-top: 15px;
+}
 
 .c-zoomControls a .c-container {
   display: block;
   margin-top: 5px;
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+}
