--- a/src/styles/inputRange.scss
+++ b/src/styles/inputRange.scss
@@ -1,28 +1,39 @@
 .input-range {
   width: 90%;
-  margin: 15px 15px 40px 20px; }
+  margin: 15px 15px 40px 20px;
+}
 
 .input-range__label {
   color: #333;
-  font-family: sans-serif; }
+  font-family: sans-serif;
+}
 
 .input-range__label.input-range__label--min {
-  left: 10px; }
+  left: 10px;
+}
 
 .input-range__label.input-range__label--max {
-  right: 10px; }
+  right: 10px;
+}
 
 .input-range__track {
-  background: #999; }
+  background: #999;
+}
 
 .input-range__track--active {
-  background: #ed6000; }
+  background: #ed6000;
+}
 
 .input-range__slider {
   background: #ed6000;
-  border: 1px solid #ed6000; }
+  border: 1px solid #ed6000;
+}
 
 @media (max-width: 670px) {
+
   .input-range {
     width: 80vw;
-    margin: 15px auto 40px auto; } }
+    margin: 15px auto 40px auto;
+  }
+
+}
