--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -3,23 +3,30 @@
   top: 0;
   bottom: 0;
   padding: 10px;
-  transition: all 0.3s ease-in-out; }
+  transition: all 0.3s ease-in-out;
+}
 
 .icon img {
   width: 30px;
-  height: 30px; }
+  height: 30px;
+}
 
 .icon.left {
-  left: 0; }
+  left: 0;
+}
 
 .icon.right {
-  right: 0; }
+  right: 0;
+}
 
 .icon:hover {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .icon.direction-left {
-  transform: rotate(90deg); }
+  transform: rotate(90deg);
+}
 
 .icon.direction-right {
-  transform: rotate(-90deg); }
+  transform: rotate(-90deg);
+}
