--- a/src/styles/map.scss
+++ b/src/styles/map.scss
@@ -5,10 +5,11 @@
   right: 0;
   bottom: 0;
   z-index: 0;
-  background: white; }
-
+  background: white;
+}
 .c-map .leaflet-container .leaflet-pane.leaflet-tile-pane {
-  opacity: 0.75; }
+  opacity: 0.75;
+}
 
 .c-map .leaflet-container .c-feature {
   pointer-events: auto;
@@ -16,18 +17,22 @@
   fill: #ed6000;
   stroke: #ed6000;
   stroke-width: 2px;
-  stroke-opacity: 1; }
+  stroke-opacity: 1;
+}
 
 .c-map .leaflet-container .c-feature.adjacent {
   stroke-dasharray: 10 25;
-  fill-opacity: 0; }
+  fill-opacity: 0;
+}
 
 .c-map .leaflet-container .c-feature:hover,
 .c-map .leaflet-container .c-feature.active {
-  fill-opacity: 0.5; }
+  fill-opacity: 0.5;
+}
 
 .c-map .leaflet-container .c-feature.adjacent:hover {
-  fill-opacity: 0.25; }
+  fill-opacity: 0.25;
+}
 
 /* Tooltip */
 .c-map .leaflet-container .leaflet-pane .leaflet-tooltip.c-tooltip {
@@ -36,10 +41,11 @@
   color: black;
   border: none;
   box-shadow: none;
-  background-color: transparent; }
-
+  background-color: transparent;
+}
 .c-map .leaflet-container .leaflet-pane .leaflet-tooltip.c-tooltip:before {
-  content: none; }
-
+  content: none;
+}
 .c-map .leaflet-container .leaflet-pane .leaflet-tooltip.c-tooltip h1 {
-  margin: 0; }
+  margin: 0;
+}
