reduce tooltip font size on mobile devices

--- a/src/styles/map.scss
+++ b/src/styles/map.scss
@@ -59,6 +59,12 @@
         margin: 0;
       }
 
+      @media (max-width: 767px) {
+        h1 {
+          font-size: 1.7em;
+        }
+      }
+
     }
   }
 }
