--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -15,93 +15,40 @@
   background-size: 200% 100%;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-tap-highlight-color: transparent;
-}
-
-.c-button:hover,
-.c-button.active,
-.c-button.loading {
-  box-shadow: 0 0 0 2px #ed6000;
-}
-
-.c-button.flat {
-  border: none;
-  box-shadow: none;
-}
-
-.c-button.loading {
-  background-position: left bottom;
-}
-
-.c-button .c-button--text {
-  display: inline-block;
-  min-width: 200px;
-  line-height: 30px;
-  font-size: 17px;
-}
-
-.c-button .c-button--text.left {
-  text-align: left;
-  padding-left: 35px;
-}
-
-.c-button .c-button--text.center {
-  text-align: center;
-}
-
-.c-alert .c-button--text.left {
-  padding-left: 0;
-  min-width: 150px;
-}
-
-.c-button.disabled {
-  cursor: not-allowed;
-  opacity: 0.35;
-}
-
-.c-button.hovering.disabled:hover {
-  box-shadow: none;
+  &:hover, &.active, &.loading {
+    box-shadow: 0 0 0 2px #ed6000;
+  }
+  &.flat {
+    border: none;
+    box-shadow: none;
+  }
+  &.loading {
+    background-position: left bottom;
+  }
+  &.disabled {
+    cursor: not-allowed;
+    opacity: 0.35;
+  }
+  .c-button--text {
+    display: inline-block;
+    min-width: 200px;
+    line-height: 30px;
+    font-size: 17px;
+    &.left {
+      text-align: left;
+      padding-left: 35px;
+    }
+    &.center {
+      text-align: center;
+    }
+  }
 }
 
 @media (max-width: 670px) {
 
-  .c-zoomControls .c-button {
-    padding: 5px;
-    min-width: 170px;
+  .c-button {
+    .c-button--text {
+      min-width: auto;
+      font-size: 15px;
+    }
   }
-
-  .c-zoomControls > .c-container {
-    font-size: small;
-    margin: 5px 15px;
-    text-align: center;
-  }
-
-  .c-zoomControls .c-button.hovering:hover {
-    box-shadow: none;
-  }
-
-  .c-button .c-button--text {
-    min-width: auto;
-    font-size: 15px;
-  }
-
-  .c-alert .icon {
-    padding: 5px 15px 5px 5px;
-  }
-
-  .c-alert .c-button {
-    padding: 5px 5px 5px 20px;
-    min-width: 150px;
-  }
-
-  .c-filters .c-button {
-    padding: 5px;
-    min-width: 100px;
-    font-size: 14px;
-    text-align: center;
-  }
-
-  .c-filters .c-button .icon.right {
-    display: none;
-  }
-
-}
