--- a/src/styles/zoomControls.scss
+++ b/src/styles/zoomControls.scss
@@ -21,3 +21,17 @@
   margin-top: 5px;
   margin-bottom: 5px;
 }
+
+@media (max-width: 670px) {
+
+  .c-zoomControls .c-button {
+    padding: 5px;
+    min-width: 170px;
+  }
+
+  .c-zoomControls > .c-container {
+    font-size: small;
+    margin: 5px 15px;
+    text-align: center;
+  }
+}
