--- a/src/styles/checkbox.scss
+++ b/src/styles/checkbox.scss
@@ -1,69 +1,65 @@
 .c-checkbox {
-  position: relative;
-  display: inline-block;
-  width: 22px;
-  height: 22px;
-  vertical-align: bottom;
-  margin-right: 10px;
-}
-
-.c-checkbox input {
-  display: none;
-}
-
-.c-checkbox label {
-  cursor: pointer;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: #efefef;
-  box-shadow: inset 0 1px 0 0 #bbb;
-}
-
-.c-checkbox label:after {
-  filter: alpha(opacity=0);
-  opacity: 0;
-  content: '';
-  position: absolute;
-  width: 13px;
-  height: 5px;
-  background: transparent;
-  top: 5px;
-  left: 3px;
-  border: 4px solid #ED6000;
-  border-top: none;
-  border-right: none;
-  transform: rotate(-45deg);
-}
-
-.c-checkbox label:hover::after {
-  filter: alpha(opacity=30);
-  opacity: 0.3;
-}
-
-.c-checkbox input:checked + label:after {
-  filter: alpha(opacity=100);
-  opacity: 1;
-}
-
-.c-checkbox span {
-  display: block;
-  position: absolute;
-  left: 30px;
-  text-align: left;
-  line-height: 1;
-  width: 280px;
-  padding: 5px;
-  cursor: pointer;
-  user-select: none;
-  font-size: 16px;
+    position: relative;
+    display: inline-block;
+    width: 22px;
+    height: 22px;
+    vertical-align: bottom;
+    margin-right: 10px;
+    input {
+        display: none;
+    }
+    label {
+        cursor: pointer;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: #efefef;
+        box-shadow: inset 0 1px 0 0 #bbb;
+        &:after {
+            filter: alpha(opacity=0);
+            opacity: 0;
+            content: '';
+            position: absolute;
+            width: 13px;
+            height: 5px;
+            background: transparent;
+            top: 5px;
+            left: 3px;
+            border: 4px solid #ed6000;
+            border-top: none;
+            border-right: none;
+            transform: rotate(-45deg);
+        }
+        &:hover:after {
+            filter: alpha(opacity=30);
+            opacity: 0.3;
+        }
+    }
+    input:checked + label:after {
+        filter: alpha(opacity=100);
+        opacity: 1;
+    }
+    span {
+        display: block;
+        position: absolute;
+        left: 30px;
+        text-align: left;
+        line-height: 1;
+        width: 280px;
+        padding: 5px;
+        cursor: pointer;
+        user-select: none;
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 425px) {
-  .c-checkbox span {
-    width: 204px;
-    font-size: 13px;
-  }
+    .c-checkbox {
+        span {
+            width: 204px;
+            font-size: 13px;
+        }
+    }
 }
