--- a/src/styles/date-range-picker.scss
+++ b/src/styles/date-range-picker.scss
@@ -1,11 +1,9 @@
 .DateRangePicker {
     margin: 15px;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-
-    &>div {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+    & > div {
         display: flex;
     }
-
     .DateRangePickerInput {
         flex: 1;
         display: flex;
@@ -22,50 +20,49 @@
                 font-size: 14px;
             }
             &_input__focused {
-              border-bottom: 2px solid #ed6000;
+                border-bottom: 2px solid #ed6000;
             }
-          }
-      }
+        }
+    }
 }
 
 .CalendarDay {
-  &__hovered {
-    &_span {
-      background: #ed6000;
-      color: #fff;
-      border: 1px solid #dc5b03;
+    &__hovered {
+        &_span {
+            background: #ed6000;
+            color: #fff;
+            border: 1px solid #dc5b03;
+            &:hover {
+                background: #ed6000b5;
+                border: 1px solid #dc5b038c;
+                color: #fff;
+            }
+        }
+    }
+    &__selected {
+        background: #ed6000;
+        border: 1px solid #dc5b03;
+        &:hover {
+            background: #ed6000b5;
+            border: 1px solid #dc5b038c;
+            color: #fff;
+        }
+        &_span {
+            background: #ed6000;
+            border: 1px solid #dc5b03;
 
-      &:hover {
-        background: #ed6000b5;
-        border: 1px solid #dc5b038c;
-        color: #fff;
-      }
+            &:hover {
+                background: #ed6000b5;
+                border: 1px solid #dc5b038c;
+                color: #fff;
+            }
+        }
     }
-  }
-  &__selected {
-    background: #ed6000;
-    border: 1px solid #dc5b03;
-    &:hover {
-      background: #ed6000b5;
-      border: 1px solid #dc5b038c;
-      color: #fff;
-    }
-    &_span {
-      background: #ed6000;
-      border: 1px solid #dc5b03;
-
-      &:hover {
-        background: #ed6000b5;
-        border: 1px solid #dc5b038c;
-        color: #fff;
-      }
-    }
-  }
 }
 
 .DayPickerKeyboardShortcuts_show__bottomRight {
-  border-right: 33px solid #ed6000;
-  &:hover {
-    border-right: 33px solid #ed6000b5;
-  }
+    border-right: 33px solid #ed6000;
+    &:hover {
+        border-right: 33px solid #ed6000b5;
+    }
 }
