--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -1,32 +1,26 @@
 .icon {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  padding: 10px;
-  transition: all 0.3s ease-in-out;
-}
-
-.icon img {
-  width: 30px;
-  height: 30px;
-}
-
-.icon.left {
-  left: 0;
-}
-
-.icon.right {
-  right: 0;
-}
-
-.icon:hover {
-  cursor: pointer;
-}
-
-.icon.direction-left {
-  transform: rotate(90deg);
-}
-
-.icon.direction-right {
-  transform: rotate(-90deg);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    padding: 10px;
+    transition: all 0.3s ease-in-out;
+    img {
+        width: 30px;
+        height: 30px;
+    }
+    &.left {
+        left: 0;
+    }
+    &.right {
+        right: 0;
+    }
+    &:hover {
+        cursor: pointer;
+    }
+    &.direction-left {
+        transform: rotate(90deg);
+    }
+    &.direction-right {
+        transform: rotate(-90deg);
+    }
 }
