--- a/src/styles/filters.scss
+++ b/src/styles/filters.scss
@@ -47,7 +47,8 @@
   .c-button--text {
 
     &.left {
-    padding-left: 35px;
+      padding-left: 35px;
+    }
   }
 }
 
@@ -98,4 +99,5 @@
       }
     }
   }
+
 }
